# snp

./: .cursorrules  01_snp_scan.ipynb  02_snp_manage.ipynb  README.md  gitignore  pyproject.toml
config/: nse_config.yml  snp_config.yml
data/: pf.pkl  snp_nakeds.pkl  snp_unds.pkl  watchlist.csv
data/templates/: snp_indexes.yml
src/: analysis.ipynb  covers.ipynb  covers.py  fast_prices.py  flexq.ipynb  ibfuncs.py  order_snp.ipynb  protects.ipynb  snp.py  utils.py  watchlist.ipynb  ztest.ipynb
tests/: test_black_scholes.py
waste/: black_scholes.py  covers.py  old_snp.py  old_utils.py  order_covers.ipynb  order_snp.ipynb
zdata/pkls/: ACN.pkl  BLK.pkl  CVX.pkl  EWZ.pkl  FDX.pkl  HYG.pkl  IBB.pkl  MCD.pkl  MDLZ.pkl  MS.pkl  MSFT.pkl  PEP.pkl  TNA.pkl  XRT.pkl
